--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,6 @@
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
         <!-- Customize your theme here. -->
         <item name="textPrimary">@color/black</item>
+        <item name="cardColorBase">@color/cardview_light_background</item>
     </style>
 </resources>
